--- a/gb/21/3/29/n12843449.md
+++ b/gb/21/3/29/n12843449.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iiholu351/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/iiholu351/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/iiholu351/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iiholu351/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iiholu351/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iiholu351/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iiholu351/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>教小孩子学会阅读的7个简单策略</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/03/id12843456-child-learning-alphabet-1200x775-600x400.jpg" />
 <h6>孩子们在进幼儿园之前就可以很容易地学会阅读。(Shutterstock)
 </h6>
 <hr>
-	<p>【大纪元2021年03月29日讯】（大纪元记者徐海韵编译报导）一个人受<ahref="https://github.com/iiholu351/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>的最基本的组成部分是学会<ahref="https://github.com/iiholu351/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB.md#1">阅读</a>。一个阅读能力好的人几乎可以学会任何东西。</p>
-<p>家长们倾向于认为教<ahref="https://github.com/iiholu351/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a><ahref="https://github.com/iiholu351/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB.md#1">阅读</a>是件困难的事——只有专业的<ahref="https://github.com/iiholu351/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>工作者才能完成。许多家长认为教<ahref="https://github.com/iiholu351/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>读书是老师的工作，而不是家长的工作。</p>
+	<p>【大纪元2021年03月29日讯】（大纪元记者徐海韵编译报导）一个人受<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>的最基本的组成部分是学会<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB.md#1">阅读</a>。一个阅读能力好的人几乎可以学会任何东西。</p>
+<p>家长们倾向于认为教<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB.md#1">阅读</a>是件困难的事——只有专业的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>工作者才能完成。许多家长认为教<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>读书是老师的工作，而不是家长的工作。</p>
 <p>然而，在孩子们走进幼儿园教室之前，他们可以很容易地在家里学会阅读。对大多数孩子来说，和父母一起自然的学习阅读一点也不难。</p>
 <p>这里有七个非常简单的策略，任何家长都可以在家里使用，不仅培养孩子的阅读能力，而且培养他们对阅读的热爱。</p>
 <h2>大声朗读</h2>
@@ -29,54 +29,55 @@
 <p>这是一个简单的想法，但如果你坚持的话会很有效。</p>
 <h2>神秘的文字游戏</h2>
 <p>很快，你的孩子就会开始发音了。在黑板或白板上写下更有挑战性的单词，让孩子念出来。如果他们做对了，甚至可以给他们奖励。</p>
-<p>对于这些新的小读者来说，像“跳” 或 “猫”这样的词完全合适。对于进阶级的读者，可以试试“同义词典”和“君士坦丁堡”这样的词。</p>
+<p>对于刚刚起步的小孩子来说，像“hop”或“cat”这样的词是完全适合的。对于“进阶”级的小读者来说，可以试试“thesaurus”（同义词典）和“Constantinople”（君士坦丁堡）这样的词。</p>
 <h2>给家里的物品贴上标签</h2>
 <p>为了加强正在进行的阅读课，给家里的物品上贴上标签。抬灯、窗户、冰箱、床、门都贴上标签，他们会把物品和单词联系起来。</p>
+<p>对于刚刚起步的小孩子来说，像“hop”或“cat”这样的词是完全适合的。对于“进阶”级的小读者来说，可以试试“thesaurus”（同义词典）和“Constantinople”（君士坦丁堡）这样的词。</p>
 <h2>庆祝阅读</h2>
 <p>最重要的是，热爱并庆祝在家阅读。不用管所谓的书籍阅读水平。在你的书架上放上大量高质量的文学作品和漂亮的书，让孩子们钻研。听一些全家人都能享受的有声读物。</p>
 <p>千万不要把读书当成一件家务活或苦差事。不要担心他们读得太快或太慢。不要比较兄弟姐妹之间的阅读水平。</p>
 <p>和你的孩子一起爱书，看着这份礼物成为他们余生的礼物。</p>
-<p>责任编辑：韩玉 ＃</p>
+<p>责任编辑：韩玉 ＃◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/20/11/29/n12582468.md#1">育儿锦囊：让不爱读书的孩子开始阅读</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/20/12/2/n12590004.md#1">帮6-10岁孩子提高阅读理解能力的六个方法</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/20/12/24/n12642000.md#1">提高孩子阅读能力的五个技巧</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/12/n12806262.md#1">研究：远程学习导致学生阅读能力退步30%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/29/n12582468.md#1">育儿锦囊：让不爱读书的孩子开始阅读</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/2/n12590004.md#1">帮6-10岁孩子提高阅读理解能力的六个方法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/24/n12642000.md#1">提高孩子阅读能力的五个技巧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/12/n12806262.md#1">研究：远程学习导致学生阅读能力退步30%</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11646873.md#1" target="_blank">中共暴政录：最奇葩的战争——战胜国送出国土</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/16/7/12/n8091804.md#1">【传奇】赵匡胤千里送京娘</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/15/n12812584.md#1">罗马时代迫害基督徒 今生仍在偿还业债</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/11/n12804755.md#1">“后庭花”为什么是亡国之音的代称？</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/23/n12831187.md#1">【未解之谜】月球之谜 月亮背后的故事</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/26/n12837707.md#1">【传奇大观】天仙失言落凡尘 恋久生情再沉沦</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/27/n12839719.md#1">【财商天下】打破富人魔咒 史上首位亿万富豪</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/26/n12838021.md#1">【时事军事】F-22部署日本 让西太的天空静下来</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/27/n12839121.md#1">【珍言真语】何良懋：中共百年行骗 终撕破脸</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/27/n12840070.md#1">抵制耐克？中国体坛明星们保持沉默</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/27/n12839928.md#1">知情者爆粤番禺爆炸血案内情</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/26/n12838716.md#1">企业内部文件曝光 中共变相强制民众打疫苗</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/28/n12841758.md#1">“战狼”吴京用iPhone发文 遭网民嘲讽</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/28/n12841453.md#1">香港金牌绿叶廖启智罹癌离世 享年66岁</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/26/n12838444.md#1">王宗尧与敏感品牌不割席 身着adidas服饰上庭</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/28/n12840451.md#1">宋柏纬胞姊现身餐车 黄秋生夸气质：全台最美</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/28/n12840534.md#1">韩国名编剧金银淑新戏开播 男主角撞脸孔刘</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/28/n12840638.md#1">台湾福卫五号拍到 苏伊士运河“大排长荣”</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/24/n12833946.md#1">新冠疫苗副作用一次看！打疫苗前你一定要知道</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/26/n12838700.md#1">减肥身体亮红灯 营养师：我正常吃三餐 瘦到48公斤</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/28/n12840882.md#1">美国男子离职 老板竟以9万多个硬币付薪水</a></li>
-<li><a href="https://github.com/iiholu351/djy/blob/master/gb/21/3/24/n12833597.md#1">睡弹簧床竟致癌？小心身边的“异磁场”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/iiholu351/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/iiholu351/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/29/n12843449.htm">教小孩子学会阅读的7个简单策略</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/29/n12843449.htm">教小孩子学会阅读的7个简单策略</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/iiholu351/djy/blob/master/gb/21/3/29/n12843449.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iiholu351/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iiholu351/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iiholu351/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iiholu351/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iiholu351/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12843449.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
