--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,31 +150,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13281280.md#1">无神论统御的基督教王国</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13281397.md#1">中国佛教史上最大法难——中共毁灭佛教</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/5/n13284031.md#1">【未解之谜】英国鬼屋背后的真相</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297708.md#1">【新闻看点?】台湾成核心焦点 美中紧张升级？</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297739.md#1">【远见快评】和统即武统？习与台湾隔空交手</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13295820.md#1">沈四海：香港禁止庆双十节 风暴后挂风球惹笑</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295300.md#1">国军名将张灵甫遗孀王玉龄女士去世</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13292560.md#1">【直播】110年台湾双十节 亮点流程一次看</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13293154.md#1">【财商天下】中国地方债惊人 或引发企业倒闭潮</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295303.md#1">杜汶泽观台湾双十大典直播：相信这里有未来</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295244.md#1">梅艳芳58岁冥寿 梁朝伟贴温馨合照悼念</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13293804.md#1">杨丽音揭童年阴影 自比茶叶蛋：裂痕多越入味</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297597.md#1">汤唯42歳生日 晒年迈父亲与5岁女儿合照</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297809.md#1">唐诗咏自曝：曾被嫌太瘦太矮不能演主角</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13293863.md#1">校车没来 美国老爸开加长型礼车送小孩上学</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13295825.md#1">第一款新冠口服药？莫纳皮拉韦效果副作用一次看</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295565.md#1">不用再怕蟑螂  只要收藏7个天然除蟑妙方</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13292766.md#1">【健康1+1】第一款DNA疫苗获批 比mRNA多2优点？</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13294304.md#1">狮子从公厕里冒出来 让人看傻眼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/28/n13678637.htm">【更新3.28】泽连斯基：坚持领土完整</a></p><hr>
