--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,7 +150,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/10/n10379858.md#1" target="_blank">剑平：抗美援朝？时间地点对手名义结果全错</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9756258.md#1" target="_blank">柬埔寨女儿的记忆：《他们先杀了我父亲》</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
